--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
         <div class="navmain shadow container-md container">
           <a href="#" class="navname">Mydesgin</a>
           <nav class=" navmainh">
-            <ul class="navmainc">
+            <ul class="navmainc" id="mylist">
               <li>
-                <a href="#" class="nav-link">Home</a>
+                <a href="#myname" id="home" class="nav-link">Home</a>
               </li>
                             <li>
-                <a href="#" class="nav-link">About</a>
+                <a href="#About" id="about" class="nav-link">About</a>
               </li>
                             <li>
-                <a href="#" class="nav-link">Price</a>
+                <a href="#Servive" id="service" class="nav-link">Servive</a>
               </li>
                             <li>
-                <a href="#" class="nav-link">Fetu</a>
+                <a href="#Features" id="features" class="nav-link">Features</a>
               </li>
                             <li>
-                <a href="#" class="nav-link">sss</a>
+                <a href="#Pricing" id="pricing" class="nav-link">Pricing</a>
               </li>
                             <li>
-                <a href="#" class="nav-link">contact</a>
+                <a href="#Contact" id="contact" class="nav-link">Contact</a>
               </li>
                                           <li>
-                <a href="#" class="nav-link">contact</a>
+                <a href="#Footer" id="footer" class="nav-link">Footer</a>
               </li>
             </ul>
           </nav>
@@ -53,7 +53,7 @@
         <div class="container ">
           <div class="row justify-content-center">
             <div class="col-lg-8">
-              <div class="row justify-content-center">
+              <div class=" mainh row justify-content-center">
                 <div class="headera rounded-pill aos-a ani-fadenow">
                  <i class="bi bi-star-fill firsts">
                   <span id="spaw">Award winnig agency</span>
@@ -66,21 +66,21 @@
                   <button type="button" class="btn col-3 mx-1" id="view">View our work</button>
                 </div>
                 <div class="tro row justify-content-center aos-a ani-fadeup">
-                  <div class="torphy1 justify-content-center bg-white">
+                  <div class="torphy1 justify-content-center">
                     <div class="torphy-item"><i class="bi bi-trophy"></i></div>
                     <div class="award">
                       <span class="award-item1">85+</span>
                       <span class="award-item2">Aword Won</span>
                     </div>
                   </div>
-                  <div class="torphy1  justify-content-center bg-white">
+                  <div class="torphy1  justify-content-center">
                     <div class="torphy-item"><i class="bi bi-trophy"></i></div>
                     <div class="award">
                       <span class="award-item1">500</span>
                       <span class="award-item2">Happy Clients</span>
                     </div>
                   </div>
-                  <div class="torphy1  justify-content-center bg-white">
+                  <div class="torphy1  justify-content-center">
                     <div class="torphy-item"><i class="bi bi-trophy"></i></div>
                     <div class="award">
                       <span class="award-item1">25+</span>
@@ -97,7 +97,7 @@
       </section>
     <!--End Home -->
     <!--Start About -->
-    <section class="About">
+    <section class="About" id="About">
       <div class="container">
         <div class="row justify-content-center">
           <div class="pic aos-a col-lg-5 ani-fadeleft">
@@ -121,14 +121,14 @@
                 <div class="selast1 col justify-content-start">
                     <div class="selast-bi"><i class="bi bi-graph-up-arrow"></i></div>
                     <div class="selast-co mx-2 row">
-                      <h3 class="">Strategic Growth</h3>
+                      <h3 class="Strategic">Strategic Growth</h3>
                       <p class="semid-p">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
                 </div>
                     <div class="selast1 col justify-content-start">
                     <div class="selast-bi"><i class="bi bi-people-fill"></i></div>
                     <div class="selast-co mx-2 row">
-                      <h3 class="">Expert Team</h3>
+                      <h3 class="Strategic">Expert Team</h3>
                       <p class="semid-p">Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
     </section>
         <!--End About -->
         <!--Start Service -->
-        <section class="Service container">
+        <section class="Service container" id="Servive">
           <div class="title container aos-a ani-fadeup">
             <h1 class="serh">Service</h1>
             <p class="serp">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
@@ -180,7 +180,7 @@
                 <div class="serfi">
                   <i class="bi bi-rocket-takeoff"></i>
                 </div>
-                <h1 class="h1s">Automated Workflows</h1>
+                <h2 class="h1s">Automated Workflows</h2>
                 <p class="p1s">Streamline your business processes with intelligent automation that saves time and reduces human error. Perfect for scaling teams</p>
                 <div class="serfe">
                   <div class="serfe1">
@@ -196,7 +196,7 @@
                     <span>Easy Integration</span>
                   </div>
                 </div>
-                <a href="" class="btng btn btn-primary">Get Started Free</a>
+                <a href="" class="btng btn">Get Started Free</a>
               </div>
             </div>
 
@@ -207,6 +207,10 @@
                 </div>
                 <h1 class="h1s">Automated Workflows</h1>
                 <p class="p1s">Enterprise-grade security measures to protect your data and maintain compliance standards</p>
+                                <a href="#" class="hh1">
+                  <span>gssgshshs</span>
+                  <i id="hh1" class="bi bi-arrow-right"></i>
+                </a>
               </div>
                             <div class="serff aos-a ani-fadeup">
                 <div class="serfff">
@@ -225,6 +229,10 @@
                 </div>
                 <h1 class="h1s">Automated Workflows</h1>
                 <p class="p1s">Enterprise-grade security measures to protect your data and maintain compliance standards</p>
+                                <a href="#" class="hh1">
+                  <span>gssgshshs</span>
+                  <i id="hh1" class="bi bi-arrow-right"></i>
+                </a>
               </div>
                             <div class="serff aos-a ani-fadeup">
                 <div class="serfff">
@@ -232,6 +240,10 @@
                 </div>
                 <h1 class="h1s">Automated Workflows</h1>
                 <p class="p1s">Enterprise-grade security measures to protect your data and maintain compliance standards</p>
+                                <a href="#" class="hh1">
+                  <span>gssgshshs</span>
+                  <i id="hh1" class="bi bi-arrow-right"></i>
+                </a>
               </div>
             </div>
 
@@ -352,7 +364,7 @@
         </section>
         <!--End Service -->
         <!--Start Features -->
-        <section class="Features container">
+        <section class="Features container" id="Features">
           <div class="container">
             <div class="fheader aos-a ani-fadeup">
               <h2 class="hfe">FEATURES</h2>
@@ -403,7 +415,7 @@
             <div class="fw1">
               <div class="fwc aos-a ani-fadeup">
                 <div class="fwci"><i class="bi bi-laptop fwcii"></i></div>
-                <div class="">
+                <div class="f11">
                   <h3>AI-Powered Automation</h3>
                   <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
                   <div class="fwcb">
@@ -414,7 +426,7 @@
               </div>
                             <div class="fwc aos-a ani-fadeup">
                 <div class="fwci"><i class="bi bi-laptop fwcii"></i></div>
-                <div class="">
+                <div class="f11">
                   <h3>AI-Powered Automation</h3>
                   <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
                   <div class="fwcb">
@@ -425,7 +437,7 @@
               </div>
                             <div class="fwc aos-a ani-fadeup">
                 <div class="fwci"><i class="bi bi-laptop fwcii"></i></div>
-                <div class="">
+                <div class="f11">
                   <h3>AI-Powered Automation</h3>
                   <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
                   <div class="fwcb">
@@ -436,7 +448,7 @@
               </div>
               <div class="fwc aos-a ani-fadeup">
                 <div class="fwci"><i class="bi bi-laptop fwcii"></i></div>
-                <div class="">
+                <div class="f11">
                   <h3>AI-Powered Automation</h3>
                   <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
                   <div class="fwcb">
@@ -585,7 +597,7 @@
           </div>
         </section>
 
-        <section class="pricing">
+        <section class="pricing" id="Pricing">
           <div class="container">
             <div class="testh aos-a ani-zoomin">
               <h2 class="the">Pricing</h2>
@@ -712,7 +724,7 @@
           </div>
         </section>
 
-        <section class="contact">
+        <section class="contact" id="Contact">
           <div class="container">
             <div class="testh aos-a ani-fadeup">
             <h2 class="the">Contact</h2>
@@ -777,19 +789,19 @@
                 <div class="headform"> Drop Us a line</div>
 <form >
   <div class="formg">
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Full Name" aria-describedby="emailHelp">
   </div>
   <div class="formg">
-    <input type="text" class="form-control" id="exampleInputPassword1">
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Email Address">
   </div>
   <div class="formg">
-    <input type="text" class="form-control" id="exampleInputPassword1">
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Phone Number">
   </div>
   <div class="formg">
-    <input type="tex" class="form-control" id="exampleInputPassword1">
+    <input type="tex" class="form-control" id="exampleInputPassword1" placeholder="Subject">
   </div>
   <div class="formg">
-    <textarea  id="comments" class="form-control"></textarea>
+    <textarea  id="comments" class="form-control" placeholder="type your message"></textarea>
   </div>
   <button type="submit" class="submit">Send Message <i class="bi bi-arrow-right"></i></button>
 </form>
@@ -798,7 +810,7 @@
           </div>
         </section>
 
-        <footer class="footer">
+        <footer class="footer" id="Footer">
           <div class="container">
             <div class="foot row align-items-start aos-a ani-fadeup">
               <div class="foot1 col-lg-5">
