--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <!--nvbar section-->
     <div class="navbar">
-        <div class="navmain shadow container-md container">
+        <div class="navmain shadow">
           <a href="#" class="navname">Mydesgin</a>
           <nav class=" navmainh">
             <ul class="navmainc" id="mylist">
